package eu.telecomnancy.rpg.strategy;

public interface Strategy {
    int getModifiedDamage(int damage);
}
